--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "netlify-cms-app": "^2.11.18",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-live": "^2.2.3"
+    "react-dom": "^16.12.0"
   }
 }
